--- a/app/styles.css
+++ b/app/styles.css
@@ -554,9 +554,9 @@ video {
   padding-left: 1rem;
 }
 
-@media (min-width: 640px){
+@media (min-width: 480px){
   .container{
-    max-width: 640px;
+    max-width: 480px;
     padding-right: 1.5rem;
     padding-left: 1.5rem;
   }
@@ -580,10 +580,31 @@ video {
   }
 }
 
-@media (min-width: 1536px){
-  .container{
-    max-width: 1536px;
-  }
+.btn{
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 0.375rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-transform: capitalize;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+}
+
+.btn-primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 204 0 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.btn-primary:hover{
+  opacity: 0.75;
 }
 
 .fixed{
@@ -602,28 +623,53 @@ video {
   left: 0px;
 }
 
+.right-4{
+  right: 1rem;
+}
+
 .top-0{
   top: 0px;
+}
+
+.top-\[0\.7rem\]{
+  top: 0.7rem;
 }
 
 .z-50{
   z-index: 50;
 }
 
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ml-4{
+  margin-left: 1rem;
+}
+
 .flex{
   display: flex;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-14{
   height: 3.5rem;
 }
 
+.h-auto{
+  height: auto;
+}
+
 .w-full{
   width: 100%;
 }
 
-.flex-row{
-  flex-direction: row;
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .flex-col{
@@ -642,12 +688,12 @@ video {
   justify-content: space-between;
 }
 
-.gap-5{
-  gap: 1.25rem;
+.gap-10{
+  gap: 2.5rem;
 }
 
-.border{
-  border-width: 1px;
+.gap-5{
+  gap: 1.25rem;
 }
 
 .border-b{
@@ -669,19 +715,18 @@ video {
   background-color: rgb(1 13 120 / var(--tw-bg-opacity));
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-14{
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-center{
@@ -692,14 +737,19 @@ video {
   font-family: Oswald, sans-serif;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .uppercase{
@@ -719,6 +769,37 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
+.home_title{
+  font-family: Oswald, sans-serif;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+@media (min-width: 1024px){
+  .home_title{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+}
+
+.separator{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+  height: 2px;
+  width: 7rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 204 0 / var(--tw-bg-opacity));
+}
+
+.paragraph{
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(192 192 192 / var(--tw-text-opacity));
+}
+
 @layer{
   body{
     --tw-bg-opacity: 1;
@@ -728,9 +809,104 @@ video {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
+
+  section{
+    padding-top: 4rem;
+    padding-bottom: 1rem;
+  }
+
+  @media (min-width: 768px){
+    section{
+      padding-top: 5rem;
+    }
+  }
 }
 
 .hover\:text-secondaryColor:hover{
   --tw-text-opacity: 1;
   color: rgb(255 204 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px){
+  .md\:static{
+    position: static;
+  }
+
+  .md\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:my-12{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+
+  .md\:ml-auto{
+    margin-left: auto;
+  }
+
+  .md\:block{
+    display: block;
+  }
+
+  .md\:hidden{
+    display: none;
+  }
+
+  .md\:h-full{
+    height: 100%;
+  }
+
+  .md\:w-auto{
+    width: auto;
+  }
+
+  .md\:basis-1\/2{
+    flex-basis: 50%;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:items-stretch{
+    align-items: stretch;
+  }
+
+  .md\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .md\:gap-20{
+    gap: 5rem;
+  }
+
+  .md\:border-none{
+    border-style: none;
+  }
+
+  .md\:bg-primaryColor{
+    --tw-bg-opacity: 1;
+    background-color: rgb(1 10 94 / var(--tw-bg-opacity));
+  }
+
+  .md\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .md\:text-start{
+    text-align: start;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:basis-2\/5{
+    flex-basis: 40%;
+  }
+
+  .lg\:basis-3\/5{
+    flex-basis: 60%;
+  }
 }
