--- a/src/input.css
+++ b/src/input.css
@@ -7,4 +7,28 @@
   body{
     @apply text-whiteColor bg-primaryColor tracking-wider font-dmsans;
   }
+  section{
+    @apply pt-16 pb-4 md:pt-20; 
+  }
+}
+
+@layer components{
+  .btn{
+    @apply inline-block text-sm px-8 capitalize py-3 text-center cursor-pointer rounded-md ease-linear duration-200;
+  }
+  .btn-primary{
+    @apply text-blackColor bg-secondaryColor hover:opacity-75;
+  }
+}
+
+@layer utilities{
+  .home_title{
+    @apply text-4xl font-oswald font-bold uppercase lg:text-6xl;
+  }
+  .separator{
+    @apply w-28 h-[2px] bg-secondaryColor my-5;
+  }
+  .paragraph {
+    @apply text-paragraphColor text-xs leading-5;
+  }
 }
