--- a/app/styles.css
+++ b/app/styles.css
@@ -619,6 +619,18 @@ video {
   position: relative;
 }
 
+.-bottom-4{
+  bottom: -1rem;
+}
+
+.-left-2{
+  left: -0.5rem;
+}
+
+.-left-4{
+  left: -1rem;
+}
+
 .left-0{
   left: 0px;
 }
@@ -644,8 +656,68 @@ video {
   margin-right: auto;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .ml-4{
   margin-left: 1rem;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
+}
+
+.ml-12{
+  margin-left: 3rem;
+}
+
+.ml-1{
+  margin-left: 0.25rem;
+}
+
+.mr-3{
+  margin-right: 0.75rem;
+}
+
+.ml-0{
+  margin-left: 0px;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.ml-3{
+  margin-left: 0.75rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.ml-6{
+  margin-left: 1.5rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mt-24{
+  margin-top: 6rem;
 }
 
 .flex{
@@ -660,12 +732,42 @@ video {
   height: 3.5rem;
 }
 
+.h-20{
+  height: 5rem;
+}
+
 .h-auto{
   height: auto;
 }
 
 .w-full{
   width: 100%;
+}
+
+.w-40{
+  width: 10rem;
+}
+
+.w-0{
+  width: 0px;
+}
+
+.max-w-96{
+  max-width: 24rem;
+}
+
+.basis-1\/3{
+  flex-basis: 33.333333%;
+}
+
+@keyframes move{
+  50%{
+    transform: translateY(-1rem);
+  }
+}
+
+.animate-movingY{
+  animation: move 2s linear infinite;
 }
 
 .cursor-pointer{
@@ -696,6 +798,20 @@ video {
   gap: 1.25rem;
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden{
+  overflow: hidden;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
@@ -703,6 +819,11 @@ video {
 .border-secondaryColor{
   --tw-border-opacity: 1;
   border-color: rgb(255 204 0 / var(--tw-border-opacity));
+}
+
+.bg-greenColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 121 54 / var(--tw-bg-opacity));
 }
 
 .bg-primaryColor{
@@ -715,6 +836,20 @@ video {
   background-color: rgb(1 13 120 / var(--tw-bg-opacity));
 }
 
+.bg-redColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 52 51 / var(--tw-bg-opacity));
+}
+
+.bg-secondaryColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 204 0 / var(--tw-bg-opacity));
+}
+
+.p-5{
+  padding: 1.25rem;
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -725,8 +860,21 @@ video {
   padding-bottom: 3.5rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .text-center{
@@ -752,8 +900,27 @@ video {
   line-height: 1.5rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
 .uppercase{
   text-transform: uppercase;
+}
+
+.text-rose-700{
+  --tw-text-opacity: 1;
+  color: rgb(190 18 60 / var(--tw-text-opacity));
 }
 
 .text-secondaryColor{
@@ -769,7 +936,7 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-.home_title{
+.home_title,.card_title{
   font-family: Oswald, sans-serif;
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -778,10 +945,15 @@ video {
 }
 
 @media (min-width: 1024px){
-  .home_title{
+  .home_title,.card_title{
     font-size: 3.75rem;
     line-height: 1;
   }
+}
+
+.card_title{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .separator{
@@ -811,13 +983,13 @@ video {
   }
 
   section{
-    padding-top: 4rem;
+    padding-top: 3.5rem;
     padding-bottom: 1rem;
   }
 
   @media (min-width: 768px){
     section{
-      padding-top: 5rem;
+      padding-top: 3.5rem;
     }
   }
 }
@@ -862,8 +1034,20 @@ video {
     width: auto;
   }
 
+  .md\:w-40{
+    width: 10rem;
+  }
+
+  .md\:flex-1{
+    flex: 1 1 0%;
+  }
+
   .md\:basis-1\/2{
     flex-basis: 50%;
+  }
+
+  .md\:basis-2\/3{
+    flex-basis: 66.666667%;
   }
 
   .md\:flex-row{
@@ -902,11 +1086,23 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:flex{
+    display: flex;
+  }
+
   .lg\:basis-2\/5{
     flex-basis: 40%;
   }
 
   .lg\:basis-3\/5{
     flex-basis: 60%;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:gap-10{
+    gap: 2.5rem;
   }
 }
