--- a/src/input.css
+++ b/src/input.css
@@ -8,7 +8,7 @@
     @apply text-whiteColor bg-primaryColor tracking-wider font-dmsans;
   }
   section{
-    @apply pt-16 pb-4 md:pt-20; 
+    @apply pt-14 pb-4 md:pt-14; 
   }
 }
 
@@ -22,8 +22,11 @@
 }
 
 @layer utilities{
-  .home_title{
+  .home_title,.card_title{
     @apply text-4xl font-oswald font-bold uppercase lg:text-6xl;
+  }
+  .card_title{
+    @apply text-xl;
   }
   .separator{
     @apply w-28 h-[2px] bg-secondaryColor my-5;
