--- a/app/styles.css
+++ b/app/styles.css
@@ -660,68 +660,32 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.ml-4{
-  margin-left: 1rem;
-}
-
-.ml-10{
-  margin-left: 2.5rem;
-}
-
 .ml-12{
   margin-left: 3rem;
 }
 
-.ml-1{
-  margin-left: 0.25rem;
+.ml-16{
+  margin-left: 4rem;
 }
 
-.mr-3{
-  margin-right: 0.75rem;
-}
-
-.ml-0{
-  margin-left: 0px;
-}
-
-.ml-2{
-  margin-left: 0.5rem;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.ml-5{
-  margin-left: 1.25rem;
+.ml-4{
+  margin-left: 1rem;
 }
 
 .ml-6{
   margin-left: 1.5rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mt-24{
-  margin-top: 6rem;
+.mt-16{
+  margin-top: 4rem;
 }
 
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
 }
 
 .hidden{
@@ -740,20 +704,24 @@ video {
   height: auto;
 }
 
+.w-48{
+  width: 12rem;
+}
+
 .w-full{
   width: 100%;
 }
 
-.w-40{
-  width: 10rem;
-}
-
-.w-0{
-  width: 0px;
-}
-
 .max-w-96{
   max-width: 24rem;
+}
+
+.max-w-md{
+  max-width: 28rem;
+}
+
+.flex-1{
+  flex: 1 1 0%;
 }
 
 .basis-1\/3{
@@ -774,8 +742,16 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-center{
@@ -796,6 +772,16 @@ video {
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
+}
+
+.space-y-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]){
@@ -865,8 +851,13 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pt-5{
+.py-5{
   padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.pb-14{
+  padding-bottom: 3.5rem;
 }
 
 .pb-2{
@@ -877,6 +868,10 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.pt-5{
+  padding-top: 1.25rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -885,9 +880,19 @@ video {
   font-family: Oswald, sans-serif;
 }
 
+.\!text-2xl{
+  font-size: 1.5rem !important;
+  line-height: 2rem !important;
+}
+
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl{
@@ -900,14 +905,14 @@ video {
   line-height: 1.5rem;
 }
 
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-bold{
@@ -916,6 +921,10 @@ video {
 
 .uppercase{
   text-transform: uppercase;
+}
+
+.capitalize{
+  text-transform: capitalize;
 }
 
 .text-rose-700{
@@ -928,6 +937,11 @@ video {
   color: rgb(255 204 0 / var(--tw-text-opacity));
 }
 
+.text-whiteColor{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .duration-200{
   transition-duration: 200ms;
 }
@@ -936,7 +950,7 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-.home_title,.card_title{
+.home_title,.card_title,.section_title{
   font-family: Oswald, sans-serif;
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -945,7 +959,7 @@ video {
 }
 
 @media (min-width: 1024px){
-  .home_title,.card_title{
+  .home_title,.card_title,.section_title{
     font-size: 3.75rem;
     line-height: 1;
   }
@@ -954,6 +968,11 @@ video {
 .card_title{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.section_title{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .separator{
@@ -972,6 +991,13 @@ video {
   color: rgb(192 192 192 / var(--tw-text-opacity));
 }
 
+@media (min-width: 1024px){
+  .paragraph{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
 @layer{
   body{
     --tw-bg-opacity: 1;
@@ -983,15 +1009,33 @@ video {
   }
 
   section{
-    padding-top: 3.5rem;
-    padding-bottom: 1rem;
+    margin-top: 3rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   @media (min-width: 768px){
     section{
-      padding-top: 3.5rem;
+      margin-top: 3rem;
+      margin-bottom: 3rem;
     }
   }
+
+  @media (min-width: 1024px){
+    section{
+      margin-top: 3.5rem;
+    }
+  }
+}
+
+@keyframes move{
+  50%{
+    transform: translateY(-1rem);
+  }
+}
+
+.hover\:animate-movingY:hover{
+  animation: move 2s linear infinite;
 }
 
 .hover\:text-secondaryColor:hover{
@@ -1004,18 +1048,39 @@ video {
     position: static;
   }
 
+  .md\:\!my-0{
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+  }
+
   .md\:mx-0{
     margin-left: 0px;
     margin-right: 0px;
   }
 
-  .md\:my-12{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+  .md\:mx-5{
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+  }
+
+  .md\:ml-0{
+    margin-left: 0px;
+  }
+
+  .md\:ml-3{
+    margin-left: 0.75rem;
   }
 
   .md\:ml-auto{
     margin-left: auto;
+  }
+
+  .md\:mt-14{
+    margin-top: 3.5rem;
+  }
+
+  .md\:mt-24{
+    margin-top: 6rem;
   }
 
   .md\:block{
@@ -1034,10 +1099,6 @@ video {
     width: auto;
   }
 
-  .md\:w-40{
-    width: 10rem;
-  }
-
   .md\:flex-1{
     flex: 1 1 0%;
   }
@@ -1052,6 +1113,10 @@ video {
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:items-center{
+    align-items: center;
   }
 
   .md\:items-stretch{
@@ -1075,19 +1140,37 @@ video {
     background-color: rgb(1 10 94 / var(--tw-bg-opacity));
   }
 
+  .md\:\!py-2{
+    padding-top: 0.5rem !important;
+    padding-bottom: 0.5rem !important;
+  }
+
   .md\:py-0{
     padding-top: 0px;
     padding-bottom: 0px;
   }
 
+  .md\:pt-0{
+    padding-top: 0px;
+  }
+
   .md\:text-start{
     text-align: start;
+  }
+
+  .md\:\!text-5xl{
+    font-size: 3rem !important;
+    line-height: 1 !important;
   }
 }
 
 @media (min-width: 1024px){
-  .lg\:flex{
-    display: flex;
+  .lg\:h-full{
+    height: 100%;
+  }
+
+  .lg\:flex-1{
+    flex: 1 1 0%;
   }
 
   .lg\:basis-2\/5{
@@ -1102,7 +1185,30 @@ video {
     flex-direction: row;
   }
 
+  .lg\:flex-row-reverse{
+    flex-direction: row-reverse;
+  }
+
+  .lg\:items-stretch{
+    align-items: stretch;
+  }
+
   .lg\:gap-10{
     gap: 2.5rem;
+  }
+
+  .lg\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
