--- a/src/input.css
+++ b/src/input.css
@@ -8,7 +8,7 @@
     @apply text-whiteColor bg-primaryColor tracking-wider font-dmsans;
   }
   section{
-    @apply pt-14 pb-4 md:pt-14; 
+    @apply  mt-12 pt-8 pb-8 md:my-12 lg:mt-14; 
   }
 }
 
@@ -22,16 +22,19 @@
 }
 
 @layer utilities{
-  .home_title,.card_title{
+  .home_title,.card_title,.section_title{
     @apply text-4xl font-oswald font-bold uppercase lg:text-6xl;
   }
   .card_title{
     @apply text-xl;
   }
+  .section_title{
+    @apply text-3xl
+  }
   .separator{
     @apply w-28 h-[2px] bg-secondaryColor my-5;
   }
   .paragraph {
-    @apply text-paragraphColor text-xs leading-5;
+    @apply text-paragraphColor text-xs leading-5 lg:text-lg;
   }
 }
