--- a/app/styles.css
+++ b/app/styles.css
@@ -704,12 +704,24 @@ video {
   height: auto;
 }
 
+.h-56{
+  height: 14rem;
+}
+
 .w-48{
   width: 12rem;
 }
 
 .w-full{
   width: 100%;
+}
+
+.w-40{
+  width: 10rem;
+}
+
+.w-52{
+  width: 13rem;
 }
 
 .max-w-96{
@@ -746,12 +758,20 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
 }
 
 .flex-wrap{
   flex-wrap: wrap;
+}
+
+.place-items-center{
+  place-items: center;
 }
 
 .items-center{
@@ -770,12 +790,12 @@ video {
   gap: 2.5rem;
 }
 
-.gap-5{
-  gap: 1.25rem;
-}
-
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]){
@@ -796,6 +816,14 @@ video {
 
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
 }
 
 .border-b{
@@ -942,12 +970,20 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.mix-blend-multiply{
+  mix-blend-mode: multiply;
+}
+
 .duration-200{
   transition-duration: 200ms;
 }
 
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.ease-linear{
+  transition-timing-function: linear;
 }
 
 .home_title,.card_title,.section_title{
@@ -1028,6 +1064,20 @@ video {
   }
 }
 
+.tabs ul li.active,
+.tabs ul li:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 204 0 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:scale-110:hover{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 @keyframes move{
   50%{
     transform: translateY(-1rem);
@@ -1036,6 +1086,11 @@ video {
 
 .hover\:animate-movingY:hover{
   animation: move 2s linear infinite;
+}
+
+.hover\:bg-secondaryColor:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 204 0 / var(--tw-bg-opacity));
 }
 
 .hover\:text-secondaryColor:hover{
@@ -1075,10 +1130,6 @@ video {
     margin-left: auto;
   }
 
-  .md\:mt-14{
-    margin-top: 3.5rem;
-  }
-
   .md\:mt-24{
     margin-top: 6rem;
   }
@@ -1099,6 +1150,10 @@ video {
     width: auto;
   }
 
+  .md\:w-56{
+    width: 14rem;
+  }
+
   .md\:flex-1{
     flex: 1 1 0%;
   }
@@ -1109,6 +1164,10 @@ video {
 
   .md\:basis-2\/3{
     flex-basis: 66.666667%;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -1169,6 +1228,18 @@ video {
     height: 100%;
   }
 
+  .lg\:h-40{
+    height: 10rem;
+  }
+
+  .lg\:w-24{
+    width: 6rem;
+  }
+
+  .lg\:w-32{
+    width: 8rem;
+  }
+
   .lg\:flex-1{
     flex: 1 1 0%;
   }
@@ -1179,6 +1250,10 @@ video {
 
   .lg\:basis-3\/5{
     flex-basis: 60%;
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -1195,6 +1270,10 @@ video {
 
   .lg\:gap-10{
     gap: 2.5rem;
+  }
+
+  .lg\:gap-12{
+    gap: 3rem;
   }
 
   .lg\:py-6{
