--- a/app/styles.css
+++ b/app/styles.css
@@ -660,12 +660,20 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-7{
+  margin-bottom: 1.75rem;
+}
+
 .ml-12{
   margin-left: 3rem;
 }
 
 .ml-16{
   margin-left: 4rem;
+}
+
+.ml-3{
+  margin-left: 0.75rem;
 }
 
 .ml-4{
@@ -676,8 +684,20 @@ video {
   margin-left: 1.5rem;
 }
 
+.ml-auto{
+  margin-left: auto;
+}
+
 .mt-16{
   margin-top: 4rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
@@ -696,16 +716,24 @@ video {
   height: 3.5rem;
 }
 
+.h-16{
+  height: 4rem;
+}
+
 .h-20{
   height: 5rem;
+}
+
+.h-56{
+  height: 14rem;
 }
 
 .h-auto{
   height: auto;
 }
 
-.h-56{
-  height: 14rem;
+.w-16{
+  width: 4rem;
 }
 
 .w-48{
@@ -714,14 +742,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-52{
-  width: 13rem;
 }
 
 .max-w-96{
@@ -754,12 +774,12 @@ video {
   cursor: pointer;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -814,16 +834,16 @@ video {
   overflow: hidden;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-
-.rounded{
-  border-radius: 0.25rem;
-}
-
 .rounded-3xl{
   border-radius: 1.5rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .border-b{
@@ -864,6 +884,10 @@ video {
   padding: 1.25rem;
 }
 
+.p-6{
+  padding: 1.5rem;
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -872,6 +896,11 @@ video {
 .py-14{
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+}
+
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .py-3{
@@ -933,6 +962,11 @@ video {
   line-height: 1.5rem;
 }
 
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -968,10 +1002,6 @@ video {
 .text-whiteColor{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.mix-blend-multiply{
-  mix-blend-mode: multiply;
 }
 
 .duration-200{
@@ -1146,12 +1176,12 @@ video {
     height: 100%;
   }
 
-  .md\:w-auto{
-    width: auto;
-  }
-
   .md\:w-56{
     width: 14rem;
+  }
+
+  .md\:w-auto{
+    width: auto;
   }
 
   .md\:flex-1{
@@ -1224,16 +1254,12 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:h-full{
-    height: 100%;
-  }
-
   .lg\:h-40{
     height: 10rem;
   }
 
-  .lg\:w-24{
-    width: 6rem;
+  .lg\:h-full{
+    height: 100%;
   }
 
   .lg\:w-32{
