--- a/app/styles.css
+++ b/app/styles.css
@@ -651,9 +651,16 @@ video {
   z-index: 50;
 }
 
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
+
+.row-span-1{
+  grid-row: span 1 / span 1;
 }
 
 .mx-4{
@@ -661,9 +668,18 @@ video {
   margin-right: 1rem;
 }
 
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .my-6{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mb-2{
@@ -702,20 +718,16 @@ video {
   margin-top: 4rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
+.mr-0{
+  margin-right: 0px;
 }
 
 .block{
   display: block;
+}
+
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
@@ -728,6 +740,10 @@ video {
 
 .hidden{
   display: none;
+}
+
+.h-10{
+  height: 2.5rem;
 }
 
 .h-14{
@@ -748,22 +764,6 @@ video {
 
 .h-auto{
   height: auto;
-}
-
-.h-4{
-  height: 1rem;
-}
-
-.h-8{
-  height: 2rem;
-}
-
-.h-12{
-  height: 3rem;
-}
-
-.h-10{
-  height: 2.5rem;
 }
 
 .w-16{
@@ -808,6 +808,10 @@ video {
   cursor: pointer;
 }
 
+.grid-flow-row{
+  grid-auto-flow: row;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -848,21 +852,16 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .gap-3{
   gap: 0.75rem;
 }
 
 .gap-5{
   gap: 1.25rem;
-}
-
-.gap-2{
-  gap: 0.5rem;
-}
-
-.gap-x-20{
-  -moz-column-gap: 5rem;
-       column-gap: 5rem;
 }
 
 .gap-x-10{
@@ -904,10 +903,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -919,6 +914,11 @@ video {
 .border-secondaryColor{
   --tw-border-opacity: 1;
   border-color: rgb(255 204 0 / var(--tw-border-opacity));
+}
+
+.bg-blackColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-greenColor{
@@ -946,9 +946,12 @@ video {
   background-color: rgb(255 204 0 / var(--tw-bg-opacity));
 }
 
-.bg-blackColor{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .p-5{
@@ -957,18 +960,6 @@ video {
 
 .p-6{
   padding: 1.5rem;
-}
-
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-8{
-  padding: 2rem;
-}
-
-.p-4{
-  padding: 1rem;
 }
 
 .py-10{
@@ -996,16 +987,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .pb-14{
   padding-bottom: 3.5rem;
 }
@@ -1026,16 +1007,12 @@ video {
   text-align: center;
 }
 
-.font-oswald{
-  font-family: Oswald, sans-serif;
-}
-
-.font-poppins{
-  font-family: Poppins, sans-serif;
-}
-
 .font-nunito{
   font-family: Nunito Sans, sans-serif;
+}
+
+.font-oswald{
+  font-family: Oswald, sans-serif;
 }
 
 .\!text-2xl{
@@ -1068,6 +1045,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1078,17 +1060,8 @@ video {
   line-height: 1rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .font-bold{
   font-weight: 700;
-}
-
-.font-light{
-  font-weight: 300;
 }
 
 .font-semibold{
@@ -1101,6 +1074,11 @@ video {
 
 .capitalize{
   text-transform: capitalize;
+}
+
+.text-blackColor{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-rose-700{
@@ -1116,16 +1094,6 @@ video {
 .text-whiteColor{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-blackColor{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-emerald-950{
-  --tw-text-opacity: 1;
-  color: rgb(2 44 34 / var(--tw-text-opacity));
 }
 
 .outline-none{
@@ -1266,6 +1234,14 @@ video {
     position: static;
   }
 
+  .md\:right-0{
+    right: 0px;
+  }
+
+  .md\:row-span-1{
+    grid-row: span 1 / span 1;
+  }
+
   .md\:\!my-0{
     margin-top: 0px !important;
     margin-bottom: 0px !important;
@@ -1297,8 +1273,20 @@ video {
     margin-top: 6rem;
   }
 
+  .md\:mr-0{
+    margin-right: 0px;
+  }
+
   .md\:block{
     display: block;
+  }
+
+  .md\:inline-block{
+    display: inline-block;
+  }
+
+  .md\:inline{
+    display: inline;
   }
 
   .md\:flex{
@@ -1341,16 +1329,26 @@ video {
     flex-basis: 66.666667%;
   }
 
-  .md\:grid-flow-row-dense{
-    grid-auto-flow: row dense;
-  }
-
-  .md\:grid-flow-col-dense{
-    grid-auto-flow: column dense;
-  }
-
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  @media (min-width: 768px){
+    .md\:md\:grid-cols-2{
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-none{
+    grid-template-columns: none;
   }
 
   .md\:flex-row{
@@ -1369,25 +1367,22 @@ video {
     justify-content: flex-start;
   }
 
+  @media (min-width: 768px){
+    .md\:md\:justify-start{
+      justify-content: flex-start;
+    }
+  }
+
+  .md\:justify-end{
+    justify-content: flex-end;
+  }
+
   .md\:justify-center{
     justify-content: center;
   }
 
-  .md\:justify-around{
-    justify-content: space-around;
-  }
-
   .md\:gap-20{
     gap: 5rem;
-  }
-
-  .md\:gap-0{
-    gap: 0px;
-  }
-
-  .md\:gap-x-0{
-    -moz-column-gap: 0px;
-         column-gap: 0px;
   }
 
   .md\:border-none{
@@ -1411,6 +1406,14 @@ video {
 
   .md\:pt-0{
     padding-top: 0px;
+  }
+
+  .md\:text-center{
+    text-align: center;
+  }
+
+  .md\:text-justify{
+    text-align: justify;
   }
 
   .md\:text-start{
