--- a/app/styles.css
+++ b/app/styles.css
@@ -651,16 +651,8 @@ video {
   z-index: 50;
 }
 
-.col-span-2{
-  grid-column: span 2 / span 2;
-}
-
 .col-span-3{
   grid-column: span 3 / span 3;
-}
-
-.row-span-1{
-  grid-row: span 1 / span 1;
 }
 
 .mx-4{
@@ -676,6 +668,11 @@ video {
 .my-6{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .mb-10{
@@ -808,10 +805,6 @@ video {
   cursor: pointer;
 }
 
-.grid-flow-row{
-  grid-auto-flow: row;
-}
-
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -834,6 +827,10 @@ video {
 
 .place-items-center{
   place-items: center;
+}
+
+.items-start{
+  align-items: flex-start;
 }
 
 .items-center{
@@ -885,6 +882,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -1001,6 +1004,10 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
 }
 
 .text-center{
@@ -1234,12 +1241,12 @@ video {
     position: static;
   }
 
-  .md\:right-0{
-    right: 0px;
+  .md\:m-0{
+    margin: 0px;
   }
 
-  .md\:row-span-1{
-    grid-row: span 1 / span 1;
+  .md\:m-auto{
+    margin: auto;
   }
 
   .md\:\!my-0{
@@ -1257,6 +1264,21 @@ video {
     margin-right: 1.25rem;
   }
 
+  .md\:mx-40{
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+
+  .md\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:my-10{
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
   .md\:ml-0{
     margin-left: 0px;
   }
@@ -1269,12 +1291,16 @@ video {
     margin-left: auto;
   }
 
+  .md\:mr-0{
+    margin-right: 0px;
+  }
+
   .md\:mt-24{
     margin-top: 6rem;
   }
 
-  .md\:mr-0{
-    margin-right: 0px;
+  .md\:mr-auto{
+    margin-right: auto;
   }
 
   .md\:block{
@@ -1283,14 +1309,6 @@ video {
 
   .md\:inline-block{
     display: inline-block;
-  }
-
-  .md\:inline{
-    display: inline;
-  }
-
-  .md\:flex{
-    display: flex;
   }
 
   .md\:grid{
@@ -1333,22 +1351,8 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  @media (min-width: 768px){
-    .md\:md\:grid-cols-2{
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
-
-  .md\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-none{
-    grid-template-columns: none;
   }
 
   .md\:flex-row{
@@ -1367,22 +1371,13 @@ video {
     justify-content: flex-start;
   }
 
-  @media (min-width: 768px){
-    .md\:md\:justify-start{
-      justify-content: flex-start;
-    }
-  }
-
-  .md\:justify-end{
-    justify-content: flex-end;
-  }
-
-  .md\:justify-center{
-    justify-content: center;
-  }
-
   .md\:gap-20{
     gap: 5rem;
+  }
+
+  .md\:gap-x-2{
+    -moz-column-gap: 0.5rem;
+         column-gap: 0.5rem;
   }
 
   .md\:border-none{
@@ -1406,14 +1401,6 @@ video {
 
   .md\:pt-0{
     padding-top: 0px;
-  }
-
-  .md\:text-center{
-    text-align: center;
-  }
-
-  .md\:text-justify{
-    text-align: justify;
   }
 
   .md\:text-start{
